Wed Jul 19 13:39:13 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.h:
          Changed type of rtsenb from 'int' to 'unsigned char'.
          Updated documentation to note that 'parityenb' member is
          now deprecated. 

        * ace/TTY_IO.cpp:
          Changed constructor of Serial_Params class to assign sensible
          values to class members.

Wed Jul 19 10:47:31 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_Timer_Test.cpp: Corrected compile warning re static.

Wed Jul 19 08:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ciao_config_handlers_base.mpb:
          Use exceptions as base project

Wed Jul 19 7:14:10 UTC 2006  Ossama Othman  <ossama_othman@symantec.com>

        * ace/String_Base.h (size_type):

          Explicitly bring the ACE_String_Base_Const::size_type typedef
          into the ACE_String_Base<> scope through a "using" declaration.
          IBM Visual Age 6 and Sun Studio 10 have difficulty resolving the
          name otherwise.

        * ace/SString.cpp:

          Replaced std::numeric_limits<>::max() call that was
          inadvertently introduced with its ACE_Numeric_Limits<>
          counterpart.  The former is not available on VxWorks.

Tue Jul 18 22:52:38 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Message_Queue_Test_Ex.cpp: Rearranged the pieces left out of
          single-threaded builds; should correct single-threaded builds.

Tue Jul 18 20:50:49 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Happy Birthday to me!!

Tue Jul 18 19:17:54 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

          This change is in response to bug#2602, which was reported by
          Lothar Werzinger <lothar at tradescape dot biz>. It fixes a
          problem with trying to use XML as the service configuration file
          format.  The change also includes additional comments and